# studentsDataBase

./: CMakeLists.txt  README.md  main.cpp  main.ilk  test_database.cpp
.github/workflows/: cpp.yml
